crates/ars-components/src/date_time/date_field/snapshots/ars_components__date_time__date_field__tests__segment_era_placeholder.snap
---
source: crates/ars-components/src/date_time/date_field/tests.rs
expression: "snapshot_attrs(&api.segment_attrs(&DateSegmentKind::Era))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "segment",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-field",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "era",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Era",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "5",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "1",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "era",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
