crates/ars-components/src/date_time/date_field/snapshots/ars_components__date_time__date_field__tests__segment_month_placeholder.snap
---
source: crates/ars-components/src/date_time/date_field/tests.rs
expression: "snapshot_attrs(&api.segment_attrs(&DateSegmentKind::Month))"
---
AttrMap {
    attrs: [
        (
            Data(
                "ars-part",
            ),
            String(
                "segment",
            ),
        ),
        (
            Data(
                "ars-scope",
            ),
            String(
                "date-field",
            ),
        ),
        (
            Data(
                "ars-segment",
            ),
            String(
                "month",
            ),
        ),
        (
            Aria(
                Label,
            ),
            String(
                "Month",
            ),
        ),
        (
            Aria(
                ValueMax,
            ),
            String(
                "12",
            ),
        ),
        (
            Aria(
                ValueMin,
            ),
            String(
                "1",
            ),
        ),
        (
            Aria(
                ValueText,
            ),
            String(
                "mm",
            ),
        ),
        (
            Role,
            String(
                "spinbutton",
            ),
        ),
        (
            TabIndex,
            String(
                "0",
            ),
        ),
    ],
    styles: [],
}
